[package]
name = "cc-statusline-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "cc_statusline_rs"
path = "src/lib.rs"

[[bin]]
name = "statusline"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4"